[package]
name = "webhook-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4.0", features = ["macros"] }
git2 = "0.18.1"
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
regex = "1.10.2"
thiserror = "1.0.50"
